@@ -1,3 +1,6 @@
+11/06/2010
+- bugfix the lexer did fail on larger {literal} ... {/literal} sections
+
 03/06/2010
 - bugfix on calling template functions like Smarty tags
 
